solved inputs.css z-index error

--- a/public/stylesheets/inputs.css
+++ b/public/stylesheets/inputs.css
@@ -35,7 +35,6 @@ body {
 
 .modal {
   position: fixed;
-  z-index: 99;
 }
 
 /* //// short distance ///// */
@@ -318,7 +317,6 @@ body {
 .LimitNum_form,
 .Trans_form,
 .Comments_form {
-  z-index: 0;
   border: 1px var(--main-blue-80) solid;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.4);
   background-color: rgba(255, 255, 255, 0.5);
@@ -326,31 +324,4 @@ body {
   padding: 10px;
   height: auto;
   margin: 20px;
-  -webkit-animation: fade-in-fwd 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-  animation: fade-in-fwd 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-}
-
-@-webkit-keyframes fade-in-fwd {
-  0% {
-    -webkit-transform: translateZ(-80px);
-    transform: translateZ(-80px);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
-    opacity: 1;
-  }
-}
-@keyframes fade-in-fwd {
-  0% {
-    -webkit-transform: translateZ(-80px);
-    transform: translateZ(-80px);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
-    opacity: 1;
-  }
 }
